--- a/package.json
+++ b/package.json
@@ -10,13 +10,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-autocomplete-input": "^4.2.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-navigation": "^7.5.0",
+    "react-native-switch-selector": "^2.0.6",
+    "react-native-vector-icons": "^7.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-define": "^1.1.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
