--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,10 +7,13 @@ buildscript {
         minSdkVersion = 19
         compileSdkVersion = 29
         targetSdkVersion = 29
+        kotlinVersion = "1.3.72"
     }
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
@@ -22,6 +25,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -32,7 +36,6 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
-        google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
